--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,12 +1,7 @@
 name: Build and Push Docker Image to ECR
 
 on:
-  push:
-    branches: [ main ]
-    paths:
-      - '**.py'
-      - 'Dockerfile'
-      - '.github/workflows/docker-to-ecr.yml'
+  workflow_dispatch:
 
 env:
   IMAGE_TAG: latest
@@ -22,9 +17,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        role-to-assume: arn:aws:iam::838365449755:role/opend-id-connect
+        aws-region: us-east-1
 
     - name: Log in to Amazon ECR
       id: login-ecr
@@ -40,5 +34,4 @@ jobs:
         docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-    - name: Echo image URI
-      run: echo "Image pushed: ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
+    
